log
Thu 28 Sep 2023 12:29:40 AM UTC: 
 tests:  0|4
total_score: 0/70
f9f362e
Thu 28 Sep 2023 12:44:07 AM UTC: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
fbde13d
Thu 28 Sep 2023 12:45:03 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8075fee
Thu 28 Sep 2023 12:45:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
bf94153
Thu 28 Sep 2023 12:45:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
a4b1fa5
Thu 28 Sep 2023 12:46:08 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
43ef00f
Thu 28 Sep 2023 12:46:21 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
f2bdcd1
Thu 28 Sep 2023 12:46:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5cbd855
Thu 28 Sep 2023 12:50:10 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|3
total_score: 10/70
d9c497f
Thu 28 Sep 2023 01:08:55 AM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
0a9f49e
Thu 28 Sep 2023 01:09:27 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|3
total_score: 10/70
2ca65bc
Thu 28 Sep 2023 01:10:06 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
8d8d099
Thu 28 Sep 2023 06:09:40 AM UTC: 
 heap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:59:5: error: expected ‘,’ or ‘;’ before ‘heapElem’
   59 |     heapElem elem_padre= pq->heapArray[padre]
      |     ^~~~~~~~
heap.c:67:6: error: ‘else’ without a previous ‘if’
   67 |     }else{
      |      ^~~~
heap.c:58:14: error: unused variable ‘elem_actual’ [-Werror=unused-variable]
   58 |     heapElem elem_actual = pq->heapArray[actual]
      |              ^~~~~~~~~~~
heap.c:57:9: error: unused variable ‘padre’ [-Werror=unused-variable]
   57 |     int padre=(actual-1)/2;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
60f4faf
Thu 28 Sep 2023 06:09:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:61:5: error: expected ‘,’ or ‘;’ before ‘if’
   61 |     if(elem_actual.priority>elem_padre.priority){
      |     ^~
heap.c:67:6: error: ‘else’ without a previous ‘if’
   67 |     }else{
      |      ^~~~
heap.c:59:14: error: unused variable ‘elem_padre’ [-Werror=unused-variable]
   59 |     heapElem elem_padre= pq->heapArray[padre]
      |              ^~~~~~~~~~
heap.c:58:14: error: unused variable ‘elem_actual’ [-Werror=unused-variable]
   58 |     heapElem elem_actual = pq->heapArray[actual];
      |              ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1497bd6
Thu 28 Sep 2023 06:09:50 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
b2a3e9c
Thu 28 Sep 2023 06:10:14 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
0473c97
Thu 28 Sep 2023 06:10:44 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
0fdee07
Thu 28 Sep 2023 06:44:37 AM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
cf280a8
Thu 28 Sep 2023 06:52:20 AM UTC: 
 heap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
faa4b16
Thu 28 Sep 2023 06:52:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:87:13: error: expected ‘;’ before ‘}’ token
   87 |   pq->size--
      |             ^
      |             ;
......
   93 | }
      | ~            
Compilation failed
6deeb4f
